--- a/index.html
+++ b/index.html
@@ -20,26 +20,29 @@
 		<link rel="stylesheet" type="text/css" href="main.css">
 
 		<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript"></script> -->
-
+		<!--
 		<script src="jquery.localscroll.js" type="text/javascript"></script> 
 		<script src="jquery.scrollTo.js" type="text/javascript"></script> 
-
+		-->
 		<!-- Latest compiled and minified JavaScript -->
 		<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>-->
 
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
+		<script type="text/javascript" src="smoothscroll.js"></script>
 
+		<!--
 		<script type="text/javascript">
 			$(document).ready(function() {
    				$('#nav').localScroll({duration:800});
 			});
 		</script>
-
+		-->
 
 
 	</head>
@@ -66,27 +69,29 @@
 
 	  			<div class="navbar-collapse">
 		          <ul class="nav navbar-nav">
-		            <li><a href="#">Home</a></li>
-		            <li><a href="#aboutme">About</a></li>
-		            <li><a href="#headline2">Experience</a></li>
-		            <li><a href="#headline4">Projects</a></li>
-		            <li><a href="#contactDetails">Contact</a></li>		           
+		            <li><a href="#headlineHome" class="smoothScroll">Home</a></li>
+		            <li><a href="#headline1_2" class="smoothScroll">About</a></li>
+		            <li><a href="#headline2_2" class="smoothScroll">Experience</a></li>
+		            <li><a href="#headline4_2" class="smoothScroll">Projects</a></li>
+		            <li><a href="#headline5_2" class="smoothScroll">Contact</a></li>		           
 		          </ul>
         		</div><!-- /.navbar-collapse -->
 			</nav>
 		
 
-
+			<a name="headlineHome">
 			<div class="jheader">
   				<h1>Hello, world!</h1>
   				<h1>I'm Jaiveer Kothari</h1>
   
 			</div>
+			</a>
 			
-
-			<div class="page-header" id ="projectsheader">
+			<a name="headline1_2">
+			<div class="page-header" id ="projectsheader" name="About">
   				<h1><a name="headline1">About</a><small></small></h1>
 			</div>
+			</a>
 			<div class="subcontent" id="aboutme">
 				<p>
 					I am a Computer Science major at Northwestern University in the Class of 2017. I am interested in software development and machine learning. I love going to Hackathons and building cool projects.  
@@ -95,9 +100,12 @@
 
 			</div>
 
-			<div class="page-header" id ="projectsheader">
+
+			<a name="headline2_2">
+			<div class="page-header" id ="projectsheader" name="Experience">
   				<h1><a name="headline2">Experience</a><small></small></h1>
 			</div>
+			</a>
 			<div class="subcontent" id="projects">
 				
 
@@ -170,11 +178,11 @@
 			</div>
 
 
-
-		<div class="page-header" id ="projectsheader">
+		<a name="headline4_2">
+		<div class="page-header" id ="projectsheader" name="Projects">
   				<h1><a name="headline4">Projects</a><small></small></h1>
 		</div>
-
+	    </a>
 
 		<div>
 
@@ -279,11 +287,11 @@
 
 
 		
-
-		<div class="page-header" id ="projectsheader">
+		<a name="headline5_2">
+		<div class="page-header" id ="projectsheader" name="Contact">
   				<h1><a name="headline5">Contact</a><small></small></h1>
 		</div>
-
+		</a>
 		<div>
 
 
